# ocsarchive-iiif

./: .gitignore  README.md  devenv.nix  kind-cluster.yaml  skaffold.yaml
backend/: .dockerignore  Dockerfile  poetry-requirements.txt  pyproject.toml
backend/src/ocsarchive_iiif/: config.py
backend/src/ocsarchive_iiif/api/: dependencies.py  dragon.py  main.py  path_params.py  query_params.py  routes.py  schema.py  utils.py  zpages.py
backend/src/ocsarchive_iiif/temporal/: client.py  worker.py
backend/src/ocsarchive_iiif/temporal/activities/: activities.py  schema.py
backend/src/ocsarchive_iiif/temporal/workflows/: schema.py  workflows.py
deploy/kustomize/base/: kustomization.yaml
deploy/kustomize/base/api/: deploy.yaml  svc.yaml
deploy/kustomize/base/worker/: deploy.yaml
deploy/kustomize/overlays/local/: ing-ocsarchive-iiif.yaml  kustomization.yaml
deploy/kustomize/overlays/local-depends/: ing-temporal-ui.yaml  kustomization.yaml
