[tool.poetry]
name = "ocsarchive-iiif"
version = "0.1.0"
description = "ocsarchive-iiif backend"
authors = ["Jashandeep Sohi <jsohi@lco.global>"]
readme = "README.md"
packages = [{include = "ocsarchive_iiif", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pydantic-settings = "^2.0.3"
temporalio = "^1.3.0"
watchfiles = "^0.20.0"
astropy = "^5.3.3"
httpx = {extras = ["brotli", "http2"], version = "^0.25.0"}
aiofiles = "^23.2.1"
pillow = "^10.0.1"
boto3 = "^1.28.58"
boto3-stubs = {extras = ["boto3", "s3"], version = "^1.28.58"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
